feat: division resource
