# stuart/app/Http/Requests/Division/UpdateRequest.php
@@ -1,0 +1,8 @@
+<?php
+
+namespace App\Http\Requests\Division;
+
+class UpdateRequest extends StoreRequest
+{
+    // Extending the StoreRequest class will inherit the rules() method
+}
